done with merge sort

--- a/sorting_algorithms_implementation.ipynb
+++ b/sorting_algorithms_implementation.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import time "
+    "import time \n",
+    "import math\n",
+    "import sys"
    ]
   },
   {
@@ -124,18 +126,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 150,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "np.split?"
+    "###implementation of merge sort algorithm\n",
+    "\n",
+    "#definition of merge function\n",
+    "def merge(left_sub_array, right_sub_array):\n",
+    "    merged_array = np.zeros(left_sub_array.shape[0] + right_sub_array.shape[0])\n",
+    "    \n",
+    "    left_index = 0\n",
+    "    right_index = 0\n",
+    "    \n",
+    "    for i in range(merged_array.shape[0]):\n",
+    "        if left_sub_array[left_index] <= right_sub_array[right_index] :\n",
+    "            merged_array[i] = left_sub_array[left_index]\n",
+    "            if not (left_index + 1) >= left_sub_array.shape[0]:\n",
+    "                left_index +=1\n",
+    "            else:\n",
+    "                left_sub_array[left_index] = sys.maxsize #sys.maxsize used as ininfity integer number\n",
+    "        else :\n",
+    "            merged_array[i] = right_sub_array[right_index]\n",
+    "            if not (right_index + 1) >= right_sub_array.shape[0]:\n",
+    "                right_index +=1\n",
+    "            else:\n",
+    "                right_sub_array[right_index] = sys.maxsize\n",
+    "            \n",
+    "    #merged_array = np.concatenate((left_sub_array, right_sub_array), axis=0)\n",
+    "    #left_index = 0\n",
+    "    #right_index = left_sub_array.shape[0]\n",
+    "    \n",
+    "    #for i in range(merged_array.shape[0]):\n",
+    "    #    if merged_array[left_index] <= merged_array[right_index] :\n",
+    "    #        merged_array[left_index], merged_array[right_index] = merged_array[right_index], merged_array[left_index]\n",
+    "    #        left_index +=1\n",
+    "    #    else :\n",
+    "    #        merged_array[right_index], merged_array[left_index] = merged_array[left_index], merged_array[right_index]\n",
+    "    #        if not (right_index + 1) >= merged_array.shape[0]:\n",
+    "    #            right_index +=1\n",
+    "            \n",
+    "    \n",
+    "    return merged_array\n",
+    "\n",
+    "#definition of merge_sort function\n",
+    "def merge_sort(unsorted_ms):\n",
+    "    if unsorted_ms.shape[0] == 1 :\n",
+    "        return unsorted_ms\n",
+    "    else :\n",
+    "        L_sub_array, R_sub_array = np.array_split(ary=unsorted_ms, indices_or_sections=2)\n",
+    "        \n",
+    "        L_sub_array = merge_sort(L_sub_array)\n",
+    "        R_sub_array = merge_sort(R_sub_array)\n",
+    "        \n",
+    "        return merge(L_sub_array, R_sub_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 5]\n",
+      "[ 3.  5.]\n",
+      "sorted in 0.00017976760864257812 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "##test for merge sort algorithm implementation\n",
+    "array_size = \n",
+    "array_end = 10\n",
+    "array_start = 1\n",
+    "mer_sort = np.random.randint(array_start, high= array_end, size= array_size)#np.array([1,4,5,2,9,3])\n",
+    "print (mer_sort)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "mer_sort = merge_sort(mer_sort)\n",
+    "end_time = time.time()\n",
+    "mer_sort_run_time = end_time - start_time\n",
+    "\n",
+    "print (mer_sort)\n",
+    "print (\"sorted in %s seconds\" %(mer_sort_run_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -148,11 +229,22 @@
       "[1 2 3]\n",
       "(2,) (1,)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  2.,  3.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.array([1,2,3])\n",
-    "a[0]\n",
+    "b = np.zeros(3)\n",
+    "c = np.concatenate((a,b), axis=0)\n",
     "a.shape\n",
     "for j in range(len(a)):\n",
     "    print (a[j])\n",
@@ -160,7 +252,107 @@
     "print (a)\n",
     "a.shape[0]\n",
     "l, r=np.array_split(ary=a,indices_or_sections=2)\n",
-    "print(l.shape, r.shape)"
+    "print(l.shape, r.shape)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.rand(3)\n",
+    "if a.shape[0] == 2 :\n",
+    "    print(\"hi\")\n",
+    "else :\n",
+    "    print(a[1])\n",
+    "\n",
+    "\n",
+    "a[0]=math.inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Decimal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-136-6de1bd8f1fae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDecimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Decimal' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "r =int (1)\n",
+    "if not (r + 1) >= 3:\n",
+    "    r +=1\n",
+    "    \n",
+    "print (r)\n",
+    "\n",
+    "r=Decimal(math.inf)\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `NaN` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "NaN?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9223372036854775807"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.maxsize"
    ]
   },
   {
