--- a/sorting_algorithms_implementation.ipynb
+++ b/sorting_algorithms_implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -74,6 +74,7 @@
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -127,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###implementation of merge sort algorithm\n",
@@ -184,22 +187,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3 5]\n",
-      "[ 3.  5.]\n",
-      "sorted in 0.00017976760864257812 seconds\n"
+      "[3 5 5 9 1 9 4 3]\n",
+      "[ 1.  3.  3.  4.  5.  5.  9.  9.]\n",
+      "sorted in 0.00024271011352539062 seconds\n"
      ]
     }
    ],
    "source": [
     "##test for merge sort algorithm implementation\n",
-    "array_size = \n",
+    "array_size = 8\n",
     "array_end = 10\n",
     "array_start = 1\n",
     "mer_sort = np.random.randint(array_start, high= array_end, size= array_size)#np.array([1,4,5,2,9,3])\n",
@@ -216,7 +219,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### implementation of quick sort algorithm\n",
+    "\n",
+    "#definition of artition function\n",
+    "def partition (unpartitioned):\n",
+    "    unpartitioned_size = unpartitioned.shape[0]\n",
+    "    \n",
+    "    pivot = unpartitioned[unpartitioned_size - 1]\n",
+    "    min_index = -1\n",
+    "    \n",
+    "    for i in range(unpartitioned_size-1):\n",
+    "        if unpartitioned[i] <= pivot :\n",
+    "            min_index += 1\n",
+    "            unpartitioned[min_index], unpartitioned[i] = unpartitioned[i], unpartitioned[min_index]\n",
+    "            \n",
+    "    unpartitioned[min_index + 1], unpartitioned[unpartitioned_size - 1] = unpartitioned[unpartitioned_size - 1], unpartitioned[min_index + 1]\n",
+    "    \n",
+    "    return min_index + 1 , unpartitioned\n",
+    "\n",
+    "def quick_sort(unsorted_qs):\n",
+    "    if unsorted_qs.shape[0] <= 1 :\n",
+    "        return unsorted_qs\n",
+    "    else:\n",
+    "        partition_index, unsorted_qs = partition(unsorted_qs)\n",
+    "        left_qs = unsorted_qs[:partition_index]\n",
+    "        pivot_qs = np.array((1,))\n",
+    "        pivot_qs[0] = unsorted_qs[partition_index]\n",
+    "        right_qs = unsorted_qs[partition_index + 1 :]\n",
+    "        \n",
+    "        left_qs = quick_sort(left_qs)\n",
+    "        right_qs = quick_sort(right_qs)\n",
+    "        \n",
+    "        return np.concatenate((left_qs, pivot_qs, right_qs))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 3 4 7 4 5 5 6]\n",
+      "[3 4 4 5 5 6 7 9]\n",
+      "sorted in 0.0001437664031982422 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "##test for quick sort algorithm implementation\n",
+    "array_size = 8\n",
+    "array_end = 10\n",
+    "array_start = 1\n",
+    "qs_sort = np.random.randint(array_start, high= array_end, size= array_size)#np.array([1,4,5,2,9,3])\n",
+    "print (qs_sort)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "qs_sort = quick_sort(qs_sort)\n",
+    "end_time = time.time()\n",
+    "qs_sort_run_time = end_time - start_time\n",
+    "\n",
+    "print (qs_sort)\n",
+    "print (\"sorted in %s seconds\" %(qs_sort_run_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -227,16 +314,16 @@
       "2\n",
       "3\n",
       "[1 2 3]\n",
-      "(2,) (1,)\n"
+      "(2,) (1,) (1,)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ 1.,  2.,  3.,  0.,  0.,  0.])"
+       "array([ 1.,  2.,  3.,  0.,  0.,  0.,  1.])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +331,9 @@
    "source": [
     "a = np.array([1,2,3])\n",
     "b = np.zeros(3)\n",
-    "c = np.concatenate((a,b), axis=0)\n",
+    "d = np.array((1,))\n",
+    "d[0] = a[0]\n",
+    "c = np.concatenate((a,b,d), axis=0)\n",
     "a.shape\n",
     "for j in range(len(a)):\n",
     "    print (a[j])\n",
@@ -252,40 +341,58 @@
     "print (a)\n",
     "a.shape[0]\n",
     "l, r=np.array_split(ary=a,indices_or_sections=2)\n",
-    "print(l.shape, r.shape)\n",
+    "print(l.shape, r.shape, d.shape)\n",
     "c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.array?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 2 3]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0"
+       "(array([9, 2]), array([2, 3]))"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.rand(3)\n",
+    "a = np.random.randint(1,10,3)\n",
     "if a.shape[0] == 2 :\n",
     "    print(\"hi\")\n",
     "else :\n",
-    "    print(a[1])\n",
+    "    print(a)\n",
     "\n",
-    "\n",
-    "a[0]=math.inf"
+    "a[:2], a[1:]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +409,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-136-6de1bd8f1fae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDecimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-6de1bd8f1fae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDecimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'Decimal' is not defined"
      ]
     }
@@ -314,45 +421,7 @@
     "    \n",
     "print (r)\n",
     "\n",
-    "r=Decimal(math.inf)\n",
     "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `NaN` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "NaN?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9223372036854775807"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sys.maxsize"
    ]
   },
   {
